fixed dark mode for index.html

--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ p.about {
 }
 
 .color {
-    color: #7c00c3;
+    color: #9632cf;
     font-style: italic;
     text-transform: lowercase;
 }
@@ -111,7 +111,7 @@ p.about {
 
 #contact h4 {
     margin: 0.2em;
-    background-color: #7c00c3;
+    background-color: #9632cf;
     border-radius: 0.5em;
     padding: 0.5em;
     color: #f3f3f3;
